objects/Budget__c/Budget__c.object-meta.xml
<CustomObject>
    <label>Budget</label>
    <nameField>
        <displayFormat>B-{0000}</displayFormat>
        <label>Budget ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budgets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>