objects/Budget__c/fields/BudgetArea__c.field-meta.xml
<CustomField>
    <fullName>BudgetArea__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Area</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Area__c.OwnerId</field>
            <operation>equals</operation>
            <valueField>$User.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Area__c</referenceTo>
    <relationshipLabel>Budgets</relationshipLabel>
    <relationshipName>Budgets</relationshipName>
    <type>Lookup</type>
</CustomField>