objects/Budget__c/fields/BudgetSub_Area__c.field-meta.xml
<CustomField>
    <fullName>BudgetSub_Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub Area</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Sub_Area__c.Area__c</field>
            <operation>equals</operation>
            <valueField>$Source.BudgetArea__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Sub_Area__c</referenceTo>
    <relationshipLabel>Budgets</relationshipLabel>
    <relationshipName>Budgets</relationshipName>
    <type>Lookup</type>
</CustomField>